# tokagotchi

./: .gitignore  README.md  pyproject.toml
config/: arena.yaml  curriculum.yaml  loop1_gepa.yaml  loop2_distill.yaml  loop3_rl.yaml  master.yaml  rewards.yaml
data/: task_bank.json
data/curriculum/: seed_tasks.json
data/loop1_results/: loop1_results.json
data/prompts/: seed.json
docker/: Dockerfile.arena  mock_api_server.py
docs/: KNOWN_ISSUES.md
paper/: main.tex
scripts/: convert_to_ollama.py  export_gguf.py  run_all.py  run_loop1.py  run_loop1_lite.py  run_loop2.py  run_loop3.py  setup.sh  smoke_test.py  smoke_test_training.py  test_all_loops.py  vendor_flash_moe.sh
src/: config.py  models.py
src/arena/: __init__.py  docker_manager.py  game.py  subprocess_manager.py
src/curriculum/: frontier_prober.py  sec_engine.py  task_generator.py
src/infra/: __init__.py  codex_bridge.py  eval_harness.py  trace_store.py  vllm_server.py  vram_scheduler.py  wandb_tracker.py
src/loop1_gepa/: __init__.py  claude_cli_lm.py  dspy_gepa_engine.py  dspy_metric.py  dspy_program.py  dspy_tools.py  evaluator.py  evolution_engine.py  mutation_operators.py  pareto_tracker.py  prompt_genome.py
src/loop2_distill/: __init__.py  mentor_session.py  pending_buffer.py  sdpo_reevaluator.py  sft_launcher.py  trace_collector.py  trace_surgeon.py
src/loop3_rl/: __init__.py  dapo_clipping.py  rl_runner.py  trajectory_filter.py  tree_grpo.py
src/orchestrator/: __init__.py  budget_tracker.py  experiment_git.py  master_loop.py  opus_client.py
src/rewards/: __init__.py  (+4 more)
(+7 files in other folders)
