[project]
name = "tokagotchi"
version = "0.1.0"
description = "Raise your own AI on a single GPU. Opus 4.6 continuously evolves and trains a local Qwen 3.5 27B via prompt evolution, distillation, and RL."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",           # vLLM OpenAI-compatible client
    "pydantic>=2.0",         # Config & data models
    "pyyaml>=6.0",           # Config loading
    "docker>=7.0",           # Docker container management
    "rich>=13.0",            # Terminal output
    "wandb>=0.16",           # Experiment tracking
    "numpy>=1.26",           # Numerical ops
    "jsonlines>=4.0",        # JSONL read/write
]

[project.optional-dependencies]
training = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",            # QLoRA adapters
    "trl>=0.12",             # RL training (GRPO)
    "bitsandbytes>=0.44",    # Quantization
    "accelerate>=0.34",      # Training utilities
    "datasets>=3.0",         # Dataset handling
]
serving = [
    "vllm>=0.6",             # LLM serving
]

[project.scripts]
qsi-loop1 = "scripts.run_loop1:main"
qsi-loop2 = "scripts.run_loop2:main"
qsi-loop3 = "scripts.run_loop3:main"
qsi-all = "scripts.run_all:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
